--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -331,9 +331,21 @@
     <h1>
       Bienvenu sur {{ title }}!
     </h1>
-    <app-my-first></app-my-first>
   </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12">
+          <h2>Mes appareils</h2>
+          <ul class="list-group">
+            <app-device></app-device>
+            <app-device></app-device>
+            <app-device></app-device>
+          </ul>
+        </div>
+      </div>
+    </div>
   
+
   <!-- Footer -->
   <footer>
       Love Angular?&nbsp;
